Fixing spacing.

--- a/firechat_twilio/css/woody-landing.css
+++ b/firechat_twilio/css/woody-landing.css
@@ -94,3 +94,7 @@ input[type="text"]:focus {
 .btn {
     margin-top: 20px;
 }
+
+li {
+    margin-bottom: 10px;
+}
